--- a/omnifood/index.html
+++ b/omnifood/index.html
@@ -1,15 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./src/css/normalize.css">
-    <link rel="stylesheet" href="./src/css/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Lato:100,300,300i,400&display=swap" rel="stylesheet">
-    <title>food</title>
-</head>
-<body>
-    
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+        <link rel="stylesheet" href="./src/css/normalize.css" />
+        <link rel="stylesheet" href="./src/css/style.css" />
+        <link href="https://fonts.googleapis.com/css?family=Lato:100,300,300i,400&display=swap" rel="stylesheet" />
+        <title>food</title>
+    </head>
+    <body>
+        <header>
+            <div class="hero-text-box">
+                <h1>Goodbye junk food. Hello super healthy meals.</h1>
+                <a href="#">
+                    I’m hungry 
+                </a>
+                <a href="#">
+                    Show me more
+                </a>
+            </div>
+        </header>
+    </body>
 </html>
