--- a/omnifood/index.html
+++ b/omnifood/index.html
@@ -49,7 +49,7 @@
             </div>
             <div class="row">
                 <div class="col span-1-of-4 box">
-                        <i class="ion-ios-infinite-outline icon-big"></i>
+                    <i class="ion-ios-infinite-outline icon-big"></i>
 
                     <h3>Up to 365 days/year</h3>
                     <p>
@@ -57,7 +57,7 @@
                     </p>
                 </div>
                 <div class="col span-1-of-4 box">
-                        <i class="ion-ios-stopwatch-outline icon-big"></i>
+                    <i class="ion-ios-stopwatch-outline icon-big"></i>
 
                     <h3>Ready in 20 minutes</h3>
                     <p>
@@ -66,7 +66,7 @@
                     </p>
                 </div>
                 <div class="col span-1-of-4 box">
-                        <i class="ion-ios-nutrition-outline icon-big"></i>
+                    <i class="ion-ios-nutrition-outline icon-big"></i>
 
                     <h3>100% organic</h3>
                     <p>
@@ -74,7 +74,7 @@
                     </p>
                 </div>
                 <div class="col span-1-of-4 box">
-                        <i class="ion-ios-cart-outline icon-big"></i>
+                    <i class="ion-ios-cart-outline icon-big"></i>
 
                     <h3>Order anything</h3>
                     <p>
@@ -83,24 +83,179 @@
                 </div>
             </div>
         </section>
+
+        <section class="section-meals">
+            <ul class="meal-showcase clearfix">
+                <li>
+                    <figure>
+                        <img src="src/img/1.jpg" alt="Korean bibimbap with egg and vegetables" />
+                    </figure>
+                </li>
+                <li>
+                    <figure>
+                        <img src="src/img/2.jpg" alt="Simple italian pizza with cherry tomatoes" />
+                    </figure>
+                </li>
+                <li>
+                    <figure>
+                        <img src="src/img/3.jpg" alt="Chicken breast steak with vegetables " />
+                    </figure>
+                </li>
+                <li>
+                    <figure>
+                        <img src="src/img/4.jpg" alt="Autumn pumpkin soup" />
+                    </figure>
+                </li>
+            </ul>
+            <ul class="meal-showcase clearfix">
+                <li>
+                    <figure>
+                        <img src="src/img/5.jpg" alt="Paleo beef steak with vegetables" />
+                    </figure>
+                </li>
+                <li>
+                    <figure>
+                        <img src="src/img/6.jpg" alt="Healthy baguette with egg and vegetables" />
+                    </figure>
+                </li>
+                <li>
+                    <figure>
+                        <img src="src/img/7.jpg" alt="Burger with cheddar and bacon" />
+                    </figure>
+                </li>
+                <li>
+                    <figure>
+                        <img src="src/img/8.jpg" alt="Granola with cherries and strawberries" />
+                    </figure>
+                </li>
+            </ul>
+        </section>
+
+        <section class="section-steps">
+            <div class="row">
+                <h2>How it works &dash; Simple as 1, 2, 3</h2>
+            </div>
+            <div class="row">
+                <div class="col span-1-of-2 step-box">
+                    <img class="app-screen" src="src/img/app-iPhone.png" alt="iphone" />
+                </div>
+                <div class="col span-1-of-2 step-box">
+                    <div class="works-step">
+                        <div>1</div>
+                        <p>Choose the subscription plan that best fits your needs and sign up today.</p>
+                    </div>
+                    <div class="works-step">
+                        <div>2</div>
+                        <p>Order your delicious meal using our mobile app or website. Or you can even call us!</p>
+                    </div>
+                    <div class="works-step">
+                        <div>3</div>
+                        <p>Enjoy your meal after less than 20 minutes. See you the next time!</p>
+                    </div>
+                    <a href="#" class="btn-app">
+                        <img src="src/img/download-app.svg" alt="app store button">
+                    </a>
+                    <a href="#" class="btn-app">
+                            <img src="src/img/download-app-android.png" alt="download-app-android store button">
+                        </a>
+                </div>
+            </div>
+        </section>
+        <section class="sectio-cites">
+            <h3></h3>
+        </section>
     </body>
 </html>
 <!-- 
 
-Section 1: Features
-Title: Get food fast — not fast food.
+    
+Section 4: Cities
+Title: We're currently in these cities
 
-Hello, we’re Omnifood, your new premium food delivery service. We know you’re always busy. No time for cooking. So let us take care of that, we’re really good at it, we promise!
+Lisbon
+1600+ happy eaters
+60+ top chefs
+@omnifood_lx
 
-Up to 365 days/year
-Never cook again! We really mean that. Our subscription plans include up to 365 days/year coverage. You can also choose to order more flexibly if that's your style.
+San Francisco
+3700+ happy eaters
+160+ top chefs
+@omnifood_sf
+
+Berlin
+2300+ happy eaters
+110+ top chefs
+@omnifood_berlin
+
+London
+1200+ happy eaters
+50+ top chefs
+@omnifood_london
 
 
-100% organic
-All our vegetables are fresh, organic and local. Animals are raised without added hormones or antibiotics. Good for your health, the environment, and it also tastes better!
 
-Order anything
-We don't limit your creativity, which means you can order whatever you feel like. You can also choose from our menu containing over 100 delicious meals. It's up to you!
+
+Section 5: Customer testimonials
+Title: Our customers can't live without us
+
+Omnifood is just awesome! I just launched a startup which leaves me with no time for cooking, so Omnifood is a life-saver. Now that I got used to it, I couldn't live without my daily meals!
+(Alberto Duncan)
+
+Inexpensive, healthy and great-tasting meals, delivered right to my home. We have lots of food delivery here in Lisbon, but no one comes even close to Omifood. Me and my family are so in love!
+(Joana Silva)
+
+I was looking for a quick and easy food delivery service in San Franciso. I tried a lot of them and ended up with Omnifood. Best food delivery service in the Bay Area. Keep up the great work!
+(Milton Chapman)
+
+
+
+Section 6: Sign up and pricing plans
+Title: Start eating healthy today
+
+Plan 1: Premium
+399$ per month
+That’s only 13.30$ per meal
+1 meal every day
+Order 24/7
+Access to newest creations
+Free delivery
+
+
+Plan 2: Pro
+149$ per month
+That’s only 14.90$ per meal
+1 meal 10 days/month
+Order 24/7
+Access to newest creations
+Free delivery
+
+
+Plan 3: Starter
+19$ per meal
+1 meal
+Order from 8 am to 12 pm
+Free delivery
+Section 7: Contact form
+Title: We're happy to hear from you
+
+Fields to include:
+Name
+Email
+How did you find us?
+Newsletter
+Drop us a line
+
+Section 8: Footer
+Title: None
+
+Navigation:
+1. About us
+2. Blog
+3. Press
+4. iOS App
+5. Android App
+
+Also include links to facebook, twitter, google+ and Instagram accounts.
 
 
 
