--- a/omnifood/index.html
+++ b/omnifood/index.html
@@ -455,5 +455,9 @@
             <p>copyright &copy;All rights reserves</p>
         </div>
         </footer>
+        <script src="https://cdn.jsdelivr.net/npm/response@0.18.0/index.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/html5shiv@3.7.3/dist/html5shiv.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/selectivizr@1.0.3/selectivizr.min.js"></script>
+        
     </body>
 </html>
